--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "npm run build && npm run watch",
-    "build": "npm run build-ts && npm run tslint",
+    "build": "npm run build-ts && npm run tslint && npm run copy-static-assets",
     "serve": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
     "test": "jest --forceExit",
@@ -13,7 +13,8 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "copy-static-assets": "node copyStaticAssets.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -22,7 +23,10 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1"
+    "morgan": "~1.8.1",
+    "swagger-node-express": "^2.1.3",
+    "swagger-ui-dist": "^3.1.5",
+    "swagger-ui-express": "^2.0.6"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
@@ -33,6 +37,7 @@
     "concurrently": "^3.5.0",
     "errorhandler": "^1.5.0",
     "nodemon": "^1.11.0",
+    "shelljs": "^0.7.8",
     "tslint": "^5.6.0",
     "typescript": "^2.4.2"
   }
