--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
                 "node_modules/*",
                 "src/types/*"
             ]
-        }
+        },
+        "experimentalDecorators": true
     },
     "include": [
         "src/**/*"
