dependency injection and getResume-Service working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
                 "src/types/*"
             ]
         },
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata" : true
     },
     "include": [
         "src/**/*"
