--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve-debug": "nodemon --inspect dist/server.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "copy-static-assets": "node copyStaticAssets.js",
-    "build-swagger": "npm run build-ts && tsoa swagger && tsoa routes"
+    "build-swagger": "tsoa routes && npm run build-ts && tsoa swagger"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -23,8 +23,11 @@
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "inversify": "^4.3.0",
+    "inversify-binding-decorators": "^3.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "reflect-metadata": "^0.1.10",
     "swagger-ui-express": "^2.0.6",
     "tsoa": "^1.3.3"
   },
