--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
+    "@types/cors": "^2.8.1",
     "@types/dotenv": "^4.0.0",
     "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.36",
