--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "npm run build && npm run watch",
-    "build": "npm run build-swagger && npm run tslint && npm run copy-static-assets",
+    "build": "npm run build-swagger && npm run tslint",
     "serve": "nodemon dist/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
     "test": "jest --forceExit",
@@ -14,7 +14,6 @@
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-    "copy-static-assets": "node copyStaticAssets.js",
     "build-swagger": "tsoa routes && npm run build-ts && tsoa swagger"
   },
   "dependencies": {
