--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "shelljs": "^0.7.8",
     "tslint": "^5.6.0",
     "typescript": "^2.4.2"
-  }
+  },
+  "engines":{
+      "node": "6.9.1"
+    }
 }
