--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "resume-webservice",
   "version": "0.0.0",
   "private": true,
+  "main": "dist/server.js",
   "scripts": {
     "start": "npm run build && npm run watch",
     "build": "npm run build-swagger && npm run tslint",
