--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "morgan": "~1.8.1",
     "reflect-metadata": "^0.1.10",
     "swagger-ui-express": "^2.0.6",
-    "tsoa": "^1.3.3"
+    "tsoa": "^1.3.3",
+    "errorhandler": "^1.5.0"    
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.4",
@@ -38,7 +39,6 @@
     "@types/express": "^4.0.36",
     "@types/morgan": "^1.7.32",
     "concurrently": "^3.5.0",
-    "errorhandler": "^1.5.0",
     "nodemon": "^1.11.0",
     "shelljs": "^0.7.8",
     "tslint": "^5.6.0",
